--- a/src/main/resources/template/velocity/SqlMapServiceImpl.vm
+++ b/src/main/resources/template/velocity/SqlMapServiceImpl.vm
@@ -7,7 +7,7 @@ package ${serviceImplFullPackageName};
 /**
  * autogen
  * @author paddingdun
- * ${table.tableCommon} service impl;
+ * ${entity.tableCommon} service impl;
  * @date ${date}
  */
 @org.springframework.stereotype.Service
@@ -21,15 +21,15 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 */
 	@org.springframework.transaction.annotation.Transactional
 	@Override
-	public void ${saveMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj){
-		#foreach( $column in ${table.jspColumns})
+	public void ${saveMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
+		#foreach( $column in ${entity.jspColumns})
 		#if(${column.editRenderShow} == false)
 		#if(${column.newValueJavaCode})
 			${column.newValueJavaCode}
 		#end
 		#end
 		#end
-		dao.${saveMethodPrefix}${table.entityBeanName}(obj);
+		dao.${saveMethodPrefix}${entity.entityBeanName}(obj);
 	}
 	
 	/**
@@ -37,28 +37,28 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 */
 	@org.springframework.transaction.annotation.Transactional
 	@Override
-	public void ${updateMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj){
-		#foreach( $column in ${table.jspColumns})
+	public void ${updateMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
+		#foreach( $column in ${entity.jspColumns})
 		#if(${column.editRenderShow} == false)
 		#if(${column.editValueJavaCode})
 			${column.editValueJavaCode}
 		#end
 		#end
 		#end
-		dao.${updateMethodPrefix}${table.entityBeanName}(obj);
+		dao.${updateMethodPrefix}${entity.entityBeanName}(obj);
 	}
 	
 	/**
 	 * get pojo by pk;
 	 */
 	@Override
-	public ${pojoFullPackageName}.${table.entityBeanName} ${getMethodPrefix}${table.entityBeanName}(#pks_argument(${table.columns} ${sqlMapMarkUse})){
+	public ${pojoFullPackageName}.${entity.entityBeanName} ${getMethodPrefix}${entity.entityBeanName}(#pks_argument(${entity.columns} ${sqlMapMarkUse})){
 		java.util.Map<String, Object> params = new java.util.HashMap<String, Object>();
-		#pks_params(${table.columns} ${sqlMapMarkUse})
-		java.util.Map<java.lang.String, java.lang.Object> tmp = dao.${getMethodPrefix}${table.entityBeanName}(params);
+		#pks_params(${entity.columns} ${sqlMapMarkUse})
+		java.util.Map<java.lang.String, java.lang.Object> tmp = dao.${getMethodPrefix}${entity.entityBeanName}(params);
 		if(tmp == null) return null;
 		com.google.gson.Gson gson = com.incito.zhcs.util.GsonHelper.create();
-		${pojoFullPackageName}.${table.entityBeanName} result = gson.fromJson(gson.toJson(tmp), ${pojoFullPackageName}.${table.entityBeanName}.class);
+		${pojoFullPackageName}.${entity.entityBeanName} result = gson.fromJson(gson.toJson(tmp), ${pojoFullPackageName}.${entity.entityBeanName}.class);
 		return result;
 	}
 	
@@ -67,22 +67,22 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 */
 	@org.springframework.transaction.annotation.Transactional
 	@Override
-	public void ${deleteMethodPrefix}${table.entityBeanName}(#pks_argument_array(${table.columns} ${sqlMapMarkUse})){
+	public void ${deleteMethodPrefix}${entity.entityBeanName}(#pks_argument_array(${entity.columns} ${sqlMapMarkUse})){
 		java.util.Map<String, Object> params = new java.util.HashMap<String, Object>();
-		#pks_params(${table.columns} ${sqlMapMarkUse})
-		this.dao.${deleteMethodPrefix}${table.entityBeanName}(params);
+		#pks_params(${entity.columns} ${sqlMapMarkUse})
+		this.dao.${deleteMethodPrefix}${entity.entityBeanName}(params);
 	}
 	
 	/**
 	 * query pojo list;
 	 */
 	@Override
-	public java.util.List<${pojoFullPackageName}.${table.entityBeanName}> ${queryMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj){
-		java.util.List<java.util.Map<String, Object>> list = this.dao.${queryMethodPrefix}${table.entityBeanName}(obj);
+	public java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
+		java.util.List<java.util.Map<String, Object>> list = this.dao.${queryMethodPrefix}${entity.entityBeanName}(obj);
 		com.google.gson.Gson gson = ${gsonHelperPackageName}.GsonHelper.create();
-		java.util.List<${pojoFullPackageName}.${table.entityBeanName}> result = new java.util.ArrayList<${pojoFullPackageName}.${table.entityBeanName}>();
+		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> result = new java.util.ArrayList<${pojoFullPackageName}.${entity.entityBeanName}>();
 		for (java.util.Map<String, Object> map : list) {
-			${pojoFullPackageName}.${table.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${table.entityBeanName}.class);
+			${pojoFullPackageName}.${entity.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${entity.entityBeanName}.class);
 			result.add(o);
 		}
 		return result;
@@ -92,24 +92,24 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 * query paging pojo list;
 	 */
 	@Override
-	public ${idataCollectionPackageName}.IDataCollection<${pojoFullPackageName}.${table.entityBeanName}> ${queryPagingMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj, ${pagingPackageName}.Paging paging){
-		${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${table.entityBeanName}> result = new ${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${table.entityBeanName}>();
-		java.util.List<${pojoFullPackageName}.${table.entityBeanName}> empty = java.util.Collections.emptyList();
+	public ${idataCollectionPackageName}.IDataCollection<${pojoFullPackageName}.${entity.entityBeanName}> ${queryPagingMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj, ${pagingPackageName}.Paging paging){
+		${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${entity.entityBeanName}> result = new ${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${entity.entityBeanName}>();
+		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> empty = java.util.Collections.emptyList();
 		result.setData(empty);
 		java.util.Map<java.lang.String, java.lang.Object> params = new java.util.HashMap<java.lang.String, java.lang.Object>();
 		${defaultCollectionHelperPackageName}.CollectionHelper.object2Map(obj, params);
-		Integer totalRows = this.dao.${getPagingCountPrefix}${table.entityBeanName}(params);
+		Integer totalRows = this.dao.${getPagingCountPrefix}${entity.entityBeanName}(params);
 		result.setTotal(totalRows);
 		if(Integer.valueOf("0").equals(totalRows)){
 			return result;
 		}
 		params.put("start", paging.getStart());
 		params.put("length", paging.getLength());
-		java.util.List<java.util.Map<String, java.lang.Object>> list = this.dao.${queryPagingMethodPrefix}${table.entityBeanName}(params);
+		java.util.List<java.util.Map<String, java.lang.Object>> list = this.dao.${queryPagingMethodPrefix}${entity.entityBeanName}(params);
 		com.google.gson.Gson gson = ${gsonHelperPackageName}.GsonHelper.create();
-		java.util.List<${pojoFullPackageName}.${table.entityBeanName}> data = new java.util.ArrayList<${pojoFullPackageName}.${table.entityBeanName}>();
+		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> data = new java.util.ArrayList<${pojoFullPackageName}.${entity.entityBeanName}>();
 		for (java.util.Map<String, Object> map : list) {
-			${pojoFullPackageName}.${table.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${table.entityBeanName}.class);
+			${pojoFullPackageName}.${entity.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${entity.entityBeanName}.class);
 			data.add(o);
 		}
 		result.setData(data);
