--- a/src/main/resources/template/velocity/SqlMapIService.vm
+++ b/src/main/resources/template/velocity/SqlMapIService.vm
@@ -7,7 +7,7 @@ package ${serviceFullPackageName};
 /**
  * autogen
  * @author paddingdun
- * ${table.tableCommon} service interface;
+ * ${entity.tableCommon} service interface;
  * @date ${date}
  */
 public interface ${sqlMapIServiceJavaClassName} {
@@ -16,31 +16,31 @@ public interface ${sqlMapIServiceJavaClassName} {
 	 * save pojo;
 	 * @param obj
 	 */
-	public void ${saveMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public void ${saveMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * update pojo;
 	 * @param obj
 	 */
-	public void ${updateMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public void ${updateMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * get pojo by pk;
 	 */
-	public ${pojoFullPackageName}.${table.entityBeanName} ${getMethodPrefix}${table.entityBeanName}(#pks_argument(${table.columns} ${sqlMapMarkUse}));
+	public ${pojoFullPackageName}.${entity.entityBeanName} ${getMethodPrefix}${entity.entityBeanName}(#pks_argument(${entity.tableColumns}));
 	
 	/**
 	 * delete pojo by pk;
 	 */
-	public void ${deleteMethodPrefix}${table.entityBeanName}(#pks_argument_array(${table.columns} ${sqlMapMarkUse}));
+	public void ${deleteMethodPrefix}${entity.entityBeanName}(#pks_argument_array(${entity.tableColumns}));
 	
 	/**
 	 * query pojo list;
 	 */
-	public java.util.List<${pojoFullPackageName}.${table.entityBeanName}> ${queryMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * query paging pojo list;
 	 */
-	public ${idataCollectionPackageName}.IDataCollection<${pojoFullPackageName}.${table.entityBeanName}> ${queryPagingMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj, ${pagingPackageName}.Paging paging);
+	public ${idataCollectionPackageName}.IDataCollection<java.util.Map<java.lang.String, java.lang.Object>> ${queryPagingMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj, ${pagingPackageName}.Paging paging);
 }
