--- a/src/main/resources/template/velocity/ibatis/2.0/SqlMapIDao.vm
+++ b/src/main/resources/template/velocity/ibatis/2.0/SqlMapIDao.vm
@@ -4,45 +4,46 @@
 package ${daoFullPackageName};
 
 /**
- * autogen
  * @author paddingdun
- * ${table.tableCommon} dao interface;
+ * ${entity.tableCommon} dao interface;
  * @date ${date}
+ * @since 1.0
+ * @version 1.0
  */
 public interface ${sqlMapIDaoJavaClassName} {
 
 	/**
 	 * save pojo;
 	 */
-	public void ${saveMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public void ${saveMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * update pojo;
 	 */
-	public void ${updateMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public void ${updateMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * get pojo by pk;
 	 */
-	public java.util.Map<java.lang.String, java.lang.Object> ${getMethodPrefix}${table.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
+	public java.util.Map<java.lang.String, java.lang.Object> ${getMethodPrefix}${entity.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
 	
 	/**
 	 * delete pojo by pk;
 	 */
-	public void ${deleteMethodPrefix}${table.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
+	public void ${deleteMethodPrefix}${entity.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
 	
 	/**
 	 * query pojo list;
 	 */
-	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${table.entityBeanName}(${pojoFullPackageName}.${table.entityBeanName} obj);
+	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
 	
 	/**
 	 * query paging pojo list;
 	 */
-	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryPagingMethodPrefix}${table.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
+	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryPagingMethodPrefix}${entity.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
 	
 	/**
 	 * get paging total rows;
 	 */
-	public java.lang.Integer ${getPagingCountPrefix}${table.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
+	public java.lang.Integer ${getPagingCountPrefix}${entity.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
 }
